<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/gameCardView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewGameDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_description" />

            <TextView
                android:id="@+id/textViewGamePartySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_party_size" />

            <TextView
                android:id="@+id/textViewGameSessionFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_session_frequency" />

            <TextView
                android:id="@+id/textViewGameVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_version" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>